modules/vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-vpc"
  }

}

resource "aws_subnet" "public_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnet_a

  map_public_ip_on_launch = true

  availability_zone = "ap-south-1a"

  tags = {
    Name = "${var.project_name}-public-a"
  }

}

resource "aws_subnet" "public_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnet_b

  map_public_ip_on_launch = true

  availability_zone = "ap-south-1b"

  tags = {
    Name = "${var.project_name}-public-b"
  }

}

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_subnet_a

  availability_zone = "ap-south-1a"

  tags = {
    Name = "${var.project_name}-private-a"
  }

}

resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_subnet_b

  availability_zone = "ap-south-1b"

  tags = {
    Name = "${var.project_name}-private-b"
  }

}

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.project_name}-igw"
  }

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }

  tags = {

    Name = "${var.project_name}-public-rt"

  }

}

# Route Table Association public

resource "aws_route_table_association" "public_a" {

  subnet_id = aws_subnet.public_a.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_b" {

  subnet_id = aws_subnet.public_b.id

  route_table_id = aws_route_table.public.id

}

# Elastic IP

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {
    Name = "${var.project_name}-nat-eip"
  }

}

# NAT Gateway

resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public_a.id

  tags = {
    Name = "${var.project_name}-nat"
  }

}

# Private Route Table

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.this.id

  }

  tags = {

    Name = "${var.project_name}-private-rt"

  }

}

# Associate Private Subnets

resource "aws_route_table_association" "private_a" {

  subnet_id = aws_subnet.private_a.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_b" {

  subnet_id = aws_subnet.private_b.id

  route_table_id = aws_route_table.private.id

}
